(actually) fix styling issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
 
 html,
 body {
-  position: fixed;
   overflow: hidden;
   width: 100%;
   height: 100%;
